# template-bin

./: Cargo.toml  README.md  build.sh  cargo-generate.toml
.cargo/: config.toml
.github/workflows/: docker-image.yml
src/: main.rs
